<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_shopping_cart"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/title_shopping_cart" />

    <item
        android:id="@+id/navigation_accounts"
        android:icon="@drawable/ic_account_balance_black_24dp"
        android:title="@string/title_account" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_webView"
        android:icon="@drawable/ic_desktop_windows_black_24dp"
        android:title="@string/title_webView" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />

</menu>
